rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__af.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 230,
        "id": {
          "commentStart": 0,
          "end": 8,
          "moduleId": 0,
          "name": "mySketch",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 11,
                "end": 24,
                "moduleId": 0,
                "name": {
                  "commentStart": 11,
                  "end": 24,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 11,
                  "type": "Identifier"
                },
                "path": [],
                "start": 11,
                "type": "Name"
              },
              "commentStart": 11,
              "end": 28,
              "moduleId": 0,
              "start": 11,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 25,
                "end": 27,
                "moduleId": 0,
                "name": {
                  "commentStart": 25,
                  "end": 27,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 25,
                  "type": "Identifier"
                },
                "path": [],
                "start": 25,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 53,
                    "end": 55,
                    "moduleId": 0,
                    "name": "at",
                    "start": 53,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 58,
                    "elements": [
                      {
                        "commentStart": 59,
                        "end": 60,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 59,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 61,
                        "end": 62,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 61,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 63,
                    "moduleId": 0,
                    "start": 58,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 40,
                "end": 52,
                "moduleId": 0,
                "name": {
                  "commentStart": 40,
                  "end": 52,
                  "moduleId": 0,
                  "name": "startProfile",
                  "start": 40,
                  "type": "Identifier"
                },
                "path": [],
                "start": 40,
                "type": "Name"
              },
              "commentStart": 40,
              "end": 64,
              "moduleId": 0,
              "start": 40,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 81,
                    "end": 92,
                    "moduleId": 0,
                    "name": "endAbsolute",
                    "start": 81,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 95,
                    "elements": [
                      {
                        "commentStart": 96,
                        "end": 97,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 96,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 99,
                        "end": 100,
                        "moduleId": 0,
                        "raw": "1",
                        "start": 99,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 101,
                    "moduleId": 0,
                    "start": 95,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                },
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 103,
                    "end": 106,
                    "moduleId": 0,
                    "name": "tag",
                    "start": 103,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 109,
                    "end": 116,
                    "moduleId": 0,
                    "start": 109,
                    "type": "TagDeclarator",
                    "type": "TagDeclarator",
                    "value": "myPath"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 76,
                "end": 80,
                "moduleId": 0,
                "name": {
                  "commentStart": 76,
                  "end": 80,
                  "moduleId": 0,
                  "name": "line",
                  "start": 76,
                  "type": "Identifier"
                },
                "path": [],
                "start": 76,
                "type": "Name"
              },
              "commentStart": 76,
              "end": 117,
              "moduleId": 0,
              "start": 76,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 134,
                    "end": 145,
                    "moduleId": 0,
                    "name": "endAbsolute",
                    "start": 134,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 148,
                    "elements": [
                      {
                        "commentStart": 149,
                        "end": 150,
                        "moduleId": 0,
                        "raw": "1",
                        "start": 149,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 152,
                        "end": 153,
                        "moduleId": 0,
                        "raw": "1",
                        "start": 152,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 154,
                    "moduleId": 0,
                    "start": 148,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 129,
                "end": 133,
                "moduleId": 0,
                "name": {
                  "commentStart": 129,
                  "end": 133,
                  "moduleId": 0,
                  "name": "line",
                  "start": 129,
                  "type": "Identifier"
                },
                "path": [],
                "start": 129,
                "type": "Name"
              },
              "commentStart": 129,
              "end": 155,
              "moduleId": 0,
              "start": 129,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 172,
                    "end": 183,
                    "moduleId": 0,
                    "name": "endAbsolute",
                    "start": 172,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 186,
                    "elements": [
                      {
                        "commentStart": 187,
                        "end": 188,
                        "moduleId": 0,
                        "raw": "1",
                        "start": 187,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 190,
                        "end": 191,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 190,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 192,
                    "moduleId": 0,
                    "start": 186,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                },
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 194,
                    "end": 197,
                    "moduleId": 0,
                    "name": "tag",
                    "start": 194,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 200,
                    "end": 210,
                    "moduleId": 0,
                    "start": 200,
                    "type": "TagDeclarator",
                    "type": "TagDeclarator",
                    "value": "rightPath"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 167,
                "end": 171,
                "moduleId": 0,
                "name": {
                  "commentStart": 167,
                  "end": 171,
                  "moduleId": 0,
                  "name": "line",
                  "start": 167,
                  "type": "Identifier"
                },
                "path": [],
                "start": 167,
                "type": "Name"
              },
              "commentStart": 167,
              "end": 211,
              "moduleId": 0,
              "start": 167,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 223,
                "end": 228,
                "moduleId": 0,
                "name": {
                  "commentStart": 223,
                  "end": 228,
                  "moduleId": 0,
                  "name": "close",
                  "start": 223,
                  "type": "Identifier"
                },
                "path": [],
                "start": 223,
                "type": "Name"
              },
              "commentStart": 223,
              "end": 230,
              "moduleId": 0,
              "start": 223,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "commentStart": 11,
          "end": 230,
          "moduleId": 0,
          "start": 11,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 230,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 230,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
