rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ag.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 97,
        "id": {
          "commentStart": 0,
          "end": 8,
          "moduleId": 0,
          "name": "mySketch",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 11,
                "end": 24,
                "moduleId": 0,
                "name": {
                  "commentStart": 11,
                  "end": 24,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 11,
                  "type": "Identifier"
                },
                "path": [],
                "start": 11,
                "type": "Name"
              },
              "commentStart": 11,
              "end": 28,
              "moduleId": 0,
              "start": 11,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 25,
                "end": 27,
                "moduleId": 0,
                "name": {
                  "commentStart": 25,
                  "end": 27,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 25,
                  "type": "Identifier"
                },
                "path": [],
                "start": 25,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 45,
                    "end": 47,
                    "moduleId": 0,
                    "name": "at",
                    "start": 45,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 50,
                    "elements": [
                      {
                        "commentStart": 51,
                        "end": 52,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 51,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 53,
                        "end": 54,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 53,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 55,
                    "moduleId": 0,
                    "start": 50,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 32,
                "end": 44,
                "moduleId": 0,
                "name": {
                  "commentStart": 32,
                  "end": 44,
                  "moduleId": 0,
                  "name": "startProfile",
                  "start": 32,
                  "type": "Identifier"
                },
                "path": [],
                "start": 32,
                "type": "Name"
              },
              "commentStart": 32,
              "end": 56,
              "moduleId": 0,
              "start": 32,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 65,
                    "end": 76,
                    "moduleId": 0,
                    "name": "endAbsolute",
                    "start": 65,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 79,
                    "elements": [
                      {
                        "commentStart": 80,
                        "end": 81,
                        "moduleId": 0,
                        "raw": "1",
                        "start": 80,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 83,
                        "end": 84,
                        "moduleId": 0,
                        "raw": "1",
                        "start": 83,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 85,
                    "moduleId": 0,
                    "start": 79,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 60,
                "end": 64,
                "moduleId": 0,
                "name": {
                  "commentStart": 60,
                  "end": 64,
                  "moduleId": 0,
                  "name": "line",
                  "start": 60,
                  "type": "Identifier"
                },
                "path": [],
                "start": 60,
                "type": "Name"
              },
              "commentStart": 60,
              "end": 86,
              "moduleId": 0,
              "start": 60,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 90,
                "end": 95,
                "moduleId": 0,
                "name": {
                  "commentStart": 90,
                  "end": 95,
                  "moduleId": 0,
                  "name": "close",
                  "start": 90,
                  "type": "Identifier"
                },
                "path": [],
                "start": 90,
                "type": "Name"
              },
              "commentStart": 90,
              "end": 97,
              "moduleId": 0,
              "start": 90,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "commentStart": 11,
          "end": 97,
          "moduleId": 0,
          "start": 11,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 97,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 97,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
