rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ah.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 49,
        "id": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "myBox",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 8,
                "end": 21,
                "moduleId": 0,
                "name": {
                  "commentStart": 8,
                  "end": 21,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 8,
                  "type": "Identifier"
                },
                "path": [],
                "start": 8,
                "type": "Name"
              },
              "commentStart": 8,
              "end": 25,
              "moduleId": 0,
              "start": 8,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 22,
                "end": 24,
                "moduleId": 0,
                "name": {
                  "commentStart": 22,
                  "end": 24,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 22,
                  "type": "Identifier"
                },
                "path": [],
                "start": 22,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 42,
                    "end": 44,
                    "moduleId": 0,
                    "name": "at",
                    "start": 42,
                    "type": "Identifier"
                  },
                  "arg": {
                    "abs_path": false,
                    "commentStart": 47,
                    "end": 48,
                    "moduleId": 0,
                    "name": {
                      "commentStart": 47,
                      "end": 48,
                      "moduleId": 0,
                      "name": "p",
                      "start": 47,
                      "type": "Identifier"
                    },
                    "path": [],
                    "start": 47,
                    "type": "Name",
                    "type": "Name"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 29,
                "end": 41,
                "moduleId": 0,
                "name": {
                  "commentStart": 29,
                  "end": 41,
                  "moduleId": 0,
                  "name": "startProfile",
                  "start": 29,
                  "type": "Identifier"
                },
                "path": [],
                "start": 29,
                "type": "Name"
              },
              "commentStart": 29,
              "end": 49,
              "moduleId": 0,
              "start": 29,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "commentStart": 8,
          "end": 49,
          "moduleId": 0,
          "start": 8,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 49,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 49,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
