rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ai.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 20,
        "id": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "myBox",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 8,
                "end": 9,
                "moduleId": 0,
                "name": {
                  "commentStart": 8,
                  "end": 9,
                  "moduleId": 0,
                  "name": "f",
                  "start": 8,
                  "type": "Identifier"
                },
                "path": [],
                "start": 8,
                "type": "Name"
              },
              "commentStart": 8,
              "end": 12,
              "moduleId": 0,
              "start": 8,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "commentStart": 10,
                "end": 11,
                "moduleId": 0,
                "raw": "1",
                "start": 10,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              }
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 16,
                "end": 17,
                "moduleId": 0,
                "name": {
                  "commentStart": 16,
                  "end": 17,
                  "moduleId": 0,
                  "name": "g",
                  "start": 16,
                  "type": "Identifier"
                },
                "path": [],
                "start": 16,
                "type": "Name"
              },
              "commentStart": 16,
              "end": 20,
              "moduleId": 0,
              "start": 16,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "commentStart": 18,
                "end": 19,
                "moduleId": 0,
                "raw": "2",
                "start": 18,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 2.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "commentStart": 8,
          "end": 20,
          "moduleId": 0,
          "start": 8,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 20,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 20,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
