rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ak.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "end": 26,
      "expression": {
        "arguments": [
          {
            "type": "LabeledArg",
            "label": {
              "commentStart": 5,
              "end": 16,
              "moduleId": 0,
              "name": "endAbsolute",
              "start": 5,
              "type": "Identifier"
            },
            "arg": {
              "commentStart": 19,
              "elements": [
                {
                  "commentStart": 20,
                  "end": 21,
                  "moduleId": 0,
                  "raw": "0",
                  "start": 20,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 0.0,
                    "suffix": "None"
                  }
                },
                {
                  "commentStart": 23,
                  "end": 24,
                  "moduleId": 0,
                  "raw": "1",
                  "start": 23,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 1.0,
                    "suffix": "None"
                  }
                }
              ],
              "end": 25,
              "moduleId": 0,
              "start": 19,
              "type": "ArrayExpression",
              "type": "ArrayExpression"
            }
          }
        ],
        "callee": {
          "abs_path": false,
          "commentStart": 0,
          "end": 4,
          "moduleId": 0,
          "name": {
            "commentStart": 0,
            "end": 4,
            "moduleId": 0,
            "name": "line",
            "start": 0,
            "type": "Identifier"
          },
          "path": [],
          "start": 0,
          "type": "Name"
        },
        "commentStart": 0,
        "end": 26,
        "moduleId": 0,
        "start": 0,
        "type": "CallExpressionKw",
        "type": "CallExpressionKw",
        "unlabeled": null
      },
      "moduleId": 0,
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 26,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
